# scrapling-cli

./: .gitignore  README.md  auto_run.ps1  auto_run.sh  channels.daily.txt  fetch_new.py  filter.py  pyproject.toml  register_daily_task.ps1  requirements.txt  scrapling_cli.py  setup.sh  state.timeout.validation2.json  transcript.py  utils.py  writer.py
modules/: classifier.py  fetch_new.py  fetcher.py  filter.py  reporter.py  scorer.py  transcript.py  writer.py
output/ai_engineer/: channel_report.md  scored_shorts.csv  scored_videos.csv
output/ai_engineer/videos/: 12-factor-agents-patterns-of-reliable-llm-applications-dex-horthy-humanlayer-2025-08-01.md  2025-in-llms-so-far-illustrated-by-pelicans-on-bicycles-simon-willison-2025-08-01.md  agentic-engineering-working-with-ai-not-just-using-it-brendan-o-leary-2026-04-14.md  ai-changes-nothing-dax-raad-opencode-2025-11-29.md  architecting-agent-memory-principles-patterns-and-best-practices-richmond-alake-mongodb-2025-07-02.md  (+28 more)
output/digital_transformation_with_eric_kimberling/: channel_report.md  scored_shorts.csv  scored_videos.csv
output/ibm_technology/: channel_report.md  scored_videos.csv
src/scrapling_cli/: __init__.py  app.py  classification.py  cli.py  cli_common.py  fetch_new_cli.py  fetcher.py  filtering.py  logging_utils.py  models.py  rendering.py  reporting.py  scoring.py  state.py  utils.py
tests/: test_app_transcript_requirements.py  test_rendering_and_reporting.py  test_scoring.py  test_transcript_cleaning.py  test_transcript_service.py  test_utils_and_classification.py
(+265 files in other folders)
